test/badLhs2.slq
def main(){
	x:=[1,2,3]:!ℕ[];
	x.length[2]:=x.length; /// error
}
